--- a/PharmacySystem/Views/Items/Delete.cshtml
+++ b/PharmacySystem/Views/Items/Delete.cshtml
@@ -30,16 +30,13 @@
             @Html.DisplayFor(model => model.Price)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageData)
+            Image
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageData)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageName)
+            @if(Model.ImageData!=null)
+            {
+                <img src="data:image/jpeg;base64,@Convert.ToBase64String(Model.ImageData)"/>
+            }
         </dd>
     </dl>
     
