--- a/PharmacySystem/Views/Items/Index.cshtml
+++ b/PharmacySystem/Views/Items/Index.cshtml
@@ -22,10 +22,7 @@
                 @Html.DisplayNameFor(model => model.Price)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImageData)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImageName)
+                Image
             </th>
             <th></th>
         </tr>
@@ -43,10 +40,11 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ImageData)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ImageName)
+                @if(item.ImageData!=null)
+                {
+                    <img src="data:image/jpeg;base64,@Convert.ToBase64String(item.ImageData)"/>
+                }
+
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
