Invoices,items updated

--- a/PharmacySystem/Views/Items/Index.cshtml
+++ b/PharmacySystem/Views/Items/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PharmacySystem.Models.Item>
+﻿@model IEnumerable<PharmacySystem.Models1.Item>
 
 @{
     ViewData["Title"] = "Index";
