--- a/PharmacySystem/Views/Invoices/Index.cshtml
+++ b/PharmacySystem/Views/Invoices/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PharmacySystem.Models.Invoice>
+﻿@model IEnumerable<PharmacySystem.Models1.Invoice>
 
 @{
     ViewData["Title"] = "Index";
